Parallax: migration to react-scroll-parallax & fixed animations overflows

--- a/src/containers/App/styles/Baseline.scss
+++ b/src/containers/App/styles/Baseline.scss
@@ -1,3 +1,20 @@
+html,
+body {
+	overflow-x: hidden;
+	scroll-behavior: smooth;
+}
+
+body {
+	position: relative;
+	margin: 0;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
 $link-color: steelblue;
 $link-color-visited: rgb(136, 0, 233);
 $link-color-hover: slateblue;
